--- a/Train_Yolov8_Instance_Segmentation_On_Custom_Dataset.ipynb
+++ b/Train_Yolov8_Instance_Segmentation_On_Custom_Dataset.ipynb
@@ -339,6 +339,9 @@
     {
       "cell_type": "code",
       "source": [
+        "import locale\n",
+        "locale.getpreferredencoding = lambda: \"UTF-8\"\n",
+        "\n",
         "!pip install lapx>=0.5.2"
       ],
       "metadata": {
