--- a/Train_Yolov8_Instance_Segmentation_On_Custom_Dataset.ipynb
+++ b/Train_Yolov8_Instance_Segmentation_On_Custom_Dataset.ipynb
@@ -387,16 +387,11 @@
         "    # Create the output video writer\n",
         "    out = cv2.VideoWriter(f'{OUTPUT_DIR}/{video_file}_object_tracking.mp4', cv2.VideoWriter_fourcc(*'mp4v'), fps, (w, h))\n",
         "\n",
+        "    # Read a frame from the video\n",
+        "    ret, im0 = cap.read()\n",
+        "\n",
         "    # Start processing each frame of the video\n",
-        "    while True:\n",
-        "        # Read a frame from the video\n",
-        "        ret, im0 = cap.read()\n",
-        "\n",
-        "        if not ret:\n",
-        "            print(\"Video frame is empty or video processing has been successfully completed.\")\n",
-        "            results.clear()\n",
-        "            break\n",
-        "\n",
+        "    while ret:\n",
         "        # Create an Annotator object for annotating the frame\n",
         "        annotator = Annotator(im0, line_width=2)\n",
         "\n",
@@ -424,9 +419,15 @@
         "        # Write the annotated frame to the output video\n",
         "        out.write(im0)\n",
         "\n",
+        "        # Read the next frame\n",
+        "        ret, frame = cap.read()\n",
+        "\n",
         "        # Check for the 'q' key press to exit the loop\n",
         "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
         "            break\n",
+        "\n",
+        "    print(\"Video frame is empty or video processing has been successfully completed.\")\n",
+        "    results.clear()\n",
         "\n",
         "    # Release the output video writer and the input video capture\n",
         "    out.release()\n",
